Rationalise more Commons Collections usage, replacing with idiomatic approaches